--- a/Sender/index.html
+++ b/Sender/index.html
@@ -11,6 +11,9 @@
 <body>
     <div class="container mt-5">
         <h3>Ajouter un message</h3>
+        <!-- Retour -->
+        <a href="http://localhost:8000" class="btn btn-secondary mt-2 mb-2">Retour</a>
+        <hr>
         <form id="addMessageForm">
             <div class="form-group">
                 <label for="messageUser">Nom de l'utilisateur':</label>
@@ -24,11 +27,36 @@
         </form>
     </div>
 
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+    <!-- jQuery -->
     <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
-    <script src="add-class.js"></script>
+
+    <!-- Bootstrap JS -->
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+
+
+    <script>
+        // Fonction pour ajouter une classe
+        function addClass() {
+            var messageUser = document.getElementById('messageUser').value;
+            var messageDescription = document.getElementById('messageDescription').value;
+
+            // Exemple avec jQuery
+            $.ajax({
+                url: 'http://localhost:3000/Sender',
+                type: 'POST',
+                contentType: 'application/json',
+                data: JSON.stringify({ user: messageUser, description: messageDescription }),
+                success: function (response) {
+                    // Redirigez l'utilisateur vers la page de la liste des classes après la mise à jour
+                    window.location.href = 'http://localhost:8000';
+                },
+                error: function (error) {
+                    console.error('Erreur lors de l\'ajout du message:', error);
+                }
+            });
+        }
+    </script>
+
 </body>
 
 </html>
